sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: ')' expected but ';' found.
			if (plusPetit(j, j+1) echange(j,j+1);
                                                            ^